# pixel-art-tree-gen

./: .gitignore  actually_maybe_good_pixelart_someday.xcf  build.zig  build.zig.zon  eqn_TMP.md  framerate.py  main.py  main2d.py
haskell/: Main.hs  pixel_art_tree_gen.cabal
nim/: pixel_art_tree_gen  pixel_art_tree_gen.nimble
nim/src/: main.nim
src/: main.zig
