cabal-version:      2.4
name:               pixelarttreegen
version:            0.1.0.0

author:             Jachdich
maintainer:         jek@cospox.com

executable tree
    main-is:          Main.hs

    other-extensions: NamedFieldPuns

    build-depends:
        base ^>=4.16.4.0,
        OpenGL,
        GLUT,
        JuicyPixels,
        ghc

    hs-source-dirs:   .
    default-language: Haskell2010
